--- a/pom.xml
+++ b/pom.xml
@@ -88,8 +88,13 @@
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
             <version>20180130</version>
+        </dependency><!--  Gson: Java to Json conversion -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.4</version>
+            <scope>compile</scope>
         </dependency>
-
     </dependencies>
 
 </project>
